<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llQuality"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/jpeg_quality"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:clickable="false" />
                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/tvQuality"
                    android:clickable="false"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp" />
            </LinearLayout>
            <TextView
                android:text="@string/jpeg_quality_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView41"
                android:clickable="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llSize"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/thumb_size"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:clickable="false" />
                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/tvSize"
                    android:clickable="false"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp" />
            </LinearLayout>
            <TextView
                android:text="@string/thumb_size_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView42"
                android:clickable="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llChange"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/img_change"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:clickable="false" />
                <TextView
                    android:id="@+id/tvChange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:maxLines="1"
                    android:paddingEnd="5dp"
                    android:paddingStart="3dp"
                    android:text="" />
            </LinearLayout>
            <TextView
                android:text="@string/img_change_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:clickable="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llInterval"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/record_interval"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:clickable="false" />
                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/tvInterval"
                    android:clickable="false"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp" />
            </LinearLayout>
            <TextView
                android:text="@string/record_interval_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView555"
                android:clickable="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llExclude"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/not_foreground"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:clickable="false" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cbExclude"
                    android:clickable="false"
                    android:text="" />
            </LinearLayout>
            <TextView
                android:text="@string/not_foreground_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAutoDelete"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/auto_delete"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:clickable="false" />
                <TextView
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:id="@+id/tvAutoDelete"
                    android:clickable="false"
                    android:paddingStart="3dp"
                    android:paddingEnd="5dp" />
            </LinearLayout>
            <TextView
                android:text="@string/auto_delete_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:clickable="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llDeleteAll"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/delete_all"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_weight="1"
                    android:clickable="false" />
            </LinearLayout>
            <TextView
                android:text="@string/delete_all_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="3dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerHorizontal"
                android:clickable="false" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>