<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="apk.screenrec.MainActivity">
    <LinearLayout
        android:id="@+id/navLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="?attr/colorButtonNormal"
            android:contentDescription="@string/previous"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/ic_baseline_arrow_circle_left_36" />
        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="?attr/colorButtonNormal" />
        <ImageButton
            android:id="@+id/btnDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="?attr/colorButtonNormal"
            android:contentDescription="@string/next"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/ic_baseline_arrow_circle_right_36" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/modeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navLayout"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnMode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:background="?attr/colorButtonNormal"
            style="?android:attr/borderlessButtonStyle"
            android:longClickable="false"
            android:text="@string/grid_view"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btnMode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="?attr/colorButtonNormal"
            style="?android:attr/borderlessButtonStyle"
            android:checked="false"
            android:text="@string/page_view"
            android:textAllCaps="false" />
    </LinearLayout>
    <GridView
        android:id="@+id/gridView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/belowlayout"
        android:layout_below="@+id/modeLayout"
        android:background="@android:color/black" />
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pagerView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/belowlayout"
        android:layout_below="@+id/modeLayout"
        android:visibility="invisible" />
    <LinearLayout
        android:id="@+id/belowlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorButtonNormal"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/adv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:clickable="false"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:visibility="gone" />
        <TextView
            android:id="@+id/adv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:clickable="false"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>